[package]
name = "gst-plugin-tslatency"
description = "GStreamer latency measurement plugin"
version = "0.1.0"
edition = "2021"
authors = ["Jerry Lin <jerry73204@gmail.com>"]
repository = "https://github.com/jerry73204/gst-plugin-tslatency.git"
license = "MIT OR Apache-2.0"

[lib]
name = "gsttslatency"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = "0.8.2"

[dependencies]
glib = "0.19.7"
itertools = "0.13.0"
once_cell = "1.19.0"
rayon = "1.10.0"
slice-of-array = "0.3.2"

[dependencies.gst]
package = "gstreamer"
version = "0.22.5"

[dependencies.gst-video]
package = "gstreamer-video"
version = "0.22.5"

[dependencies.gst-base]
package = "gstreamer-base"
version = "0.22.0"

[features]
static = []
capi = []
doc = ["gst/v1_18"]

[package.metadata.capi]
min_version = "0.9.21"

[package.metadata.capi.header]
enabled = false

[package.metadata.capi.library]
install_subdir = "gstreamer-1.0"
versioning = false
import_library = false

[package.metadata.capi.pkg_config]
requires_private = "gstreamer-1.0, gstreamer-base-1.0, gstreamer-video-1.0, gobject-2.0, glib-2.0, gmodule-2.0"
